#add_subdirectory(base)
#add_subdirectory(bindings)
#add_subdirectory(compat)
#add_subdirectory(context)
#add_subdirectory(decision)
#add_subdirectory(expr)
#add_subdirectory(lib)
#add_subdirectory(main)
#add_subdirectory(options)
#add_subdirectory(parser)
#add_subdirectory(printer)
#add_subdirectory(proof)
#add_subdirectory(prop)
#add_subdirectory(smt)
#add_subdirectory(smt_util)
#add_subdirectory(theory)
#add_subdirectory(util)
